<resources>
    <!--First page-->
    <string name="app_name">FinalProject</string>

    <!--Geo data activity-->
    <string name="geo_data">Geo data</string>

    <!--Soccer match activity-->
    <string name="soccer_match">Soccer match</string>
    <string name="soccer_MyFavorite">My Favorite</string>
    <string name="soccer_help">Help</string>
    <string name="soccer_hint">Input here</string>
    <string name="soccer_favorite">Favorite</string>
    <string name="soccer_quit">Back</string>
    <string name="soccer_detail">Soccer Match Detail</string>
    <string name="soccer_highlight">Highlight On/Off</string>
    <string name="soccer_list_toast">Soccer match list is uploading</string>
    <string name="soccer_list_snackbar">Soccer match list uploaded successfully</string>
    <string name="soccer_detail_toast">Image is uploading</string>
    <string name="soccer_detail_snackbar_add">Added to my favorite list</string>
    <string name="soccer_detail_snackbar_delete">Removed from my favorite list</string>

    <!--Lyrics search activity-->
    <string name="lyrics_search">Lyrics search</string>

    <!--Deezer song activity-->
    <string name="deezer_song">Deezer song</string>

</resources>