<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SoccerMatchActivity">

    <TextView
        android:id="@+id/tvFTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soccer_MyFavorite"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"/>

    <ListView
        android:id="@+id/lvFSoccer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true"
        android:layout_below="@+id/tvFTitle"
        android:layout_above="@+id/rlFBottom"/>

    <ProgressBar
        android:id="@+id/pbFSoccer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_above="@+id/rlFBottom"
        style="?android:attr/progressBarStyleHorizontal" />

    <RelativeLayout
        android:id="@+id/rlFBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnFQuit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/soccer_quit"/>
        <EditText
            android:id="@+id/etFSoccer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/btnFQuit"
            android:layout_toLeftOf="@+id/btnHelp"
            android:hint="@string/soccer_hint"/>
        <Button
            android:id="@+id/btnHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/soccer_help"/>

    </RelativeLayout>

</RelativeLayout>