<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".soccer.SoccerMatchActivity">

    <TextView
        android:id="@+id/tvSoccerTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/soccer_match"
        android:textSize="20sp"
        android:textAlignment="center"
        android:layout_alignParentTop="true"/>

    <ListView
        android:id="@+id/lvSoccer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transcriptMode="alwaysScroll"
        android:stackFromBottom="true"
        android:layout_below="@+id/tvSoccerTitle"
        android:layout_above="@+id/pbSoccer"/>

    <ProgressBar
        android:id="@+id/pbSoccer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        android:layout_above="@+id/rlSoccerBottom"
        style="?android:attr/progressBarStyleHorizontal" />


    <RelativeLayout
        android:id="@+id/rlSoccerBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/btnSoccerFList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/soccer_MyFavorite"/>
        <EditText
            android:id="@+id/etSoccer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/btnSoccerFList"
            android:layout_toStartOf="@+id/btnSoccerHelp"
            android:hint="@string/soccer_hint"/>
        <Button
            android:id="@+id/btnSoccerHelp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/soccer_help"/>

    </RelativeLayout>

</RelativeLayout>